[package]
name = "etherparse"
version = "0.10.1"
authors = ["Julian Schmid <info@julianschmid.name>"]
edition = "2018"
repository = "https://github.com/JulianSchmid/etherparse"
description = "A library for parsing & writing a bunch of packet based protocols (EthernetII, IPv4, IPv6, UDP, TCP ...)."
categories = ["network-programming", "parser-implementations"]
keywords = ["ipv4", "ipv6", "vlan", "udp", "tcp"]
license = "BSD-3-Clause"
readme = "README.md"
exclude = [
    ".gitignore",
    ".travis.yml",
    ".github/*",
    ".gitlab-ci.yml",
    ".travis/*",
    "appveyor.yml"
]

[features]
ip_number_num_enum = ["num_enum"]
ip_number_strum_iter = ["strum", "strum_macros"]
default = []

[dependencies]
num_enum = { version = "0.5", optional = true }
strum_macros = { version = "0.24", optional = true }
strum = { version = "0.24", optional = true }

[dev-dependencies]
assert_matches = "1.5.0"
proptest = "1.0.0"
