[package]
name = "etherparse"
version = "0.11.0"
authors = ["Julian Schmid <info@julianschmid.name>"]
edition = "2018"
repository = "https://github.com/JulianSchmid/etherparse"
description = "A library for parsing & writing a bunch of packet based protocols (EthernetII, IPv4, IPv6, UDP, TCP ...)."
categories = ["network-programming", "parser-implementations"]
keywords = ["ipv4", "ipv6", "vlan", "udp", "tcp"]
license = "BSD-3-Clause"
readme = "README.md"
exclude = [
    ".gitignore",
    ".travis.yml",
    ".github/*",
    ".gitlab-ci.yml",
    ".travis/*",
    "appveyor.yml"
]

[dependencies]
arrayvec = "0.7.2"

[dev-dependencies]
assert_matches = "1.5.0"
proptest = "1.0.0"
