[package]
name = "etherparse"
version = "0.16.0"
authors = ["Julian Schmid <info@julianschmid.name>"]
edition = "2021"
repository = "https://github.com/JulianSchmid/etherparse"
description = "A library for parsing & writing a bunch of packet based protocols (EthernetII, IPv4, IPv6, UDP, TCP ...)."
categories = ["network-programming", "parser-implementations", "no-std", "no-std::no-alloc"]
keywords = ["ipv4", "ipv6", "vlan", "udp", "tcp"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
exclude = [
    ".gitignore",
    ".travis.yml",
    ".github/*",
    ".gitlab-ci.yml",
    ".travis/*",
    "appveyor.yml"
]

[features]
default = ["std"]
std = []
serde = ["dep:serde", "dep:serde_arrays"]

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_arrays = { version = "0.1", optional = true }

[dev-dependencies]
proptest = "1.4.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
