[package]
name = "etherparse_proptest_generators"
version = "0.14.0"
authors = ["Julian Schmid <info@julianschmid.name>"]
edition = "2021"
repository = "https://github.com/JulianSchmid/etherparse"
description = "A library for parsing & writing a bunch of packet based protocols (EthernetII, IPv4, IPv6, UDP, TCP ...)."
categories = ["network-programming", "parser-implementations"]
keywords = ["ipv4", "ipv6", "vlan", "udp", "tcp"]
license = "MIT OR Apache-2.0"
readme = "README.md"
exclude = [
    ".gitignore",
    ".travis.yml",
    ".github/*",
    ".gitlab-ci.yml",
    ".travis/*",
    "appveyor.yml"
]

[dependencies]
etherparse = { path = "../etherparse" }
proptest = "1.0.0"
